--- a/src/App.css
+++ b/src/App.css
@@ -77,3 +77,22 @@
 	align-self: center;
 	margin: 0;
 }
+
+.answers {
+	list-style-type: none;
+}
+
+.answer {
+	background-color: #333;
+	color: #fff;
+	cursor: pointer;
+	height: 40px;
+	line-height: 40px;
+	margin-bottom: 10px;
+}
+.answer:hover {
+	background-color: #444;
+}
+.answer.selected {
+	background-color: #555;
+}
