--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,7 @@
 
 .answers {
 	list-style-type: none;
+	padding: 0;
 }
 
 .answer {
@@ -126,5 +127,6 @@
 	background-color: lightgray;
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	justify-content: space-between;
+	padding: 0 100px;
 }
