--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,20 @@
-.App {
+.app {
 	text-align: center;
 	margin: 0;
 	height: 100vh;
 	display: flex;
 	flex-direction: column;
 }
-.App__header {
+.app__header {
 }
-.App__main {
+.app__main {
 	display: flex;
 	flex-grow: 1;
 	padding: 0 100px;
 }
-.App__footer {
+.app__footer {
 }
-.header {
+/* .header {
 	height: 100px;
 	background-color: lightgray;
 	color: darkolivegreen;
@@ -22,7 +22,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-}
+} */
 .header__title {
 	margin: 0;
 }
