[feat]: set styles for difficulty page

--- a/src/App.css
+++ b/src/App.css
@@ -78,13 +78,21 @@
 }
 
 .difficulty {
-	display: block;
+	display: flex;
 	width: 100%;
 	height: 100%;
+	flex-direction: column;
+}
+.difficulty__content {
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+	align-items: center;
+	justify-content: center;
 }
 .difficulty__wrapper {
 	display: block;
-	height: 100%;
+	padding-bottom: 100px;
 }
 
 .question-card {
