--- a/src/App.css
+++ b/src/App.css
@@ -102,6 +102,7 @@
 
 .question-card {
 	width: 100%;
+	height: 100%;
 }
 
 .answers {
@@ -117,12 +118,17 @@
 	line-height: 40px;
 	margin-bottom: 10px;
 }
-/* .answer:hover {
-	background-color: #444;
+
+.score {
+	display: flex;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
 }
-.answer.selected {
-	background-color: #555;
-} */
+.score__wrapper {
+	display: flex;
+	flex-direction: column;
+}
 
 .footer {
 	height: 100px;
