--- a/src/App.css
+++ b/src/App.css
@@ -70,6 +70,7 @@
 	text-align: center;
 	/* color: #333; */
 	justify-content: center;
+	align-items: center;
 	cursor: pointer;
 }
 .category__title {
